accumulo4 changes for interface
Formatting fixes and iterator interface conforming

Remove BulkV1 as an option

Uses static imports for Assert
Commented out bulk import commands for now against InMemoryAccumulo

BulkV2: don't close client
Get BulkV2 to work by allowing one file to hit a large amount of tablets

Remove in-memory and fix minor test formatting and IDE warns